changing output to debug